Just for tnsmath

--- a/factory/03-tree/01-basic.sty
+++ b/factory/03-tree/01-basic.sty
@@ -65,52 +65,54 @@
             anchor = parent,
             math content
         },
-        before typesetting nodes = {%
-            where connections = 1{}{%
-                if = {isodd(connections())}{%
-                    edge path' = {%
-                        foreach \i [
-                            count    = \j from 0,
-                            evaluate = \noexpand\j
-                            as \noexpand\k
-                            using \noexpand {
-                                (\j == 0) ?
-                                0pt :
-                                ((isodd(\j)) ?
-                                (\j*4pt) :
-                                ((-\j + 1)*4pt))
-                            }
-                        ]
-                        in {%
-                            1, ..., \foresteoption{connections}
-                        }{
-                            (!u.parent anchor)
-                            --
-                            ([yshift = \noexpand\k].child anchor)
-                        }
-                    },
-                }{%
-                    edge path' = {%
-                        foreach \i [
-                            count    = \j,
-                            evaluate = \noexpand\j
-                            as \noexpand\k
-                            using {
-                                (isodd(\j)) ?
-                                (\j*4pt) :
-                                ((-\j + 1)*4pt)
-                            }
-                        ]
-                        in {1,...,\foresteoption{connections}}
-                        {
-                            (!u.parent anchor)
-                            --
-                            ([yshift = \noexpand\k].child anchor)
-                        }
-                    },
-                },
-            },
-        },
+% TO KEEP ! Personnalisation des chemins
+%
+%        before typesetting nodes = {%
+%            where connections = 1{}{%
+%                if = {isodd(connections())}{%
+%                    edge path' = {%
+%                        foreach \i [
+%                            count    = \j from 0,
+%                            evaluate = \noexpand\j
+%                            as \noexpand\k
+%                            using \noexpand {
+%                                (\j == 0) ?
+%                                0pt :
+%                                ((isodd(\j)) ?
+%                                (\j*4pt) :
+%                                ((-\j + 1)*4pt))
+%                            }
+%                        ]
+%                        in {%
+%                            1, ..., \foresteoption{connections}
+%                        }{
+%                            (!u.parent anchor)
+%                            --
+%                            ([yshift = \noexpand\k].child anchor)
+%                        }
+%                    },
+%                }{%
+%                    edge path' = {%
+%                        foreach \i [
+%                            count    = \j,
+%                            evaluate = \noexpand\j
+%                            as \noexpand\k
+%                            using {
+%                                (isodd(\j)) ?
+%                                (\j*14pt) :
+%                                ((-\j + 1)*4pt)
+%                            }
+%                        ]
+%                        in {1,...,\foresteoption{connections}}
+%                        {
+%                            (!u.parent anchor)
+%                            --
+%                            ([yshift = \noexpand\k].child anchor)
+%                        }
+%                    },
+%                },
+%            },
+%        },
         %
         pframe/.style = {
         	tikz = {
