--- a/factory/03-tree/01-basic[fr].tex
+++ b/factory/03-tree/01-basic[fr].tex
@@ -42,7 +42,11 @@ Quant au \prefix{a} et au \prefix{b} au début de \prefix{apweight} et \prefix{b
 
 
 \begin{remark}
-	Notez que le mode mathématique est activé par défaut pour les noms de noeuds et les poids comme le montre l'exemple improbable ci-dessous.
+	Notez que le mode mathématique est activé par défaut pour les noms des noeuds et les poids comme le montre l'exemple improbable
+	\footnote{
+		Quoique...
+	}
+	ci-dessous.
 
 	\inputlatexex{TikZ/probatree-math-mode.tkz}
 \end{remark}
@@ -63,7 +67,7 @@ On peut cacher tous les poids via l'environnement étoilé \verb+probatree*+ san
 
 \newparaexample{Des poids cachés localement}
 
-Pour ne cacher que certains poids afin de produire par exemple un arbre à compléter, il faudra utiliser localement le style \verb+pweight*+ comme dans l'exemple ci-dessous \emph{(ceci aussi peut servir à rédiger des exercices)}.
+Pour ne cacher que certains poids afin de produire par exemple un arbre à compléter, il faudra utiliser localement le style \verb+pweight*+ comme dans l'exemple ci-dessous.
 
 \inputlatexex{TikZ/probatree-weight-hide-locally.tkz}
 
