--- a/factory/03-tree/05-auto-num.sty
+++ b/factory/03-tree/05-auto-num.sty
@@ -95,7 +95,7 @@
 %
 %    #1 : macro to apply
 %    #2 : multi-args
-	\tns@multi@apply@couple{\tnsproba@ptree@focus@auto@abstract@edge}%
+	\tns@multi@apply@overlapping@couples{\tnsproba@ptree@focus@auto@abstract@edge}%
 	                       {#1}
 }
 
