Just for next tnsmath

--- a/factory/99-major-change-log/01-change-log[fr].tex
+++ b/factory/99-major-change-log/01-change-log[fr].tex
@@ -26,7 +26,7 @@ Tous les changements sont disponibles uniquement en anglais dans le dossier \ver
     
     \begin{itemize}[itemsep=.5em]
         \item \topic*{Arbre de probabilités}
-              le mode mathématique est activé par défaut pour les noms des noeuds et les poids \emph{(plus besoin de taper de \texttt{\$})}.
+              le mode mathématique est activé par défaut pour les noms des noeuds et les poids \emph{(plus besoin de taper plein de \texttt{\$})}.
     \end{itemize}
     
     
