--- a/factory/99-major-change-log/changes/2020/08-10.tex
+++ b/factory/99-major-change-log/changes/2020/08-10.tex
@@ -2,7 +2,7 @@ Nouvelle version mineure \verb+0.8.0-beta+.
 
 \begin{itemize}[itemsep=.5em]
     \item \topic*{Arbre de probabilités}
-          le mode mathématique est activé par défaut pour les noms des noeuds et les poids \emph{(plus besoin de taper de \texttt{\$})}.
+          le mode mathématique est activé par défaut pour les noms des noeuds et les poids \emph{(plus besoin de taper plein de \texttt{\$})}.
 \end{itemize}
 
 
