Preparing Calc. of Exp. Val.

--- a/factory/00-intro/99-packages-used[fr].tex
+++ b/factory/00-intro/99-packages-used[fr].tex
@@ -15,9 +15,10 @@ La roue ayant déjà été inventée, le package \verb#tnsproba# réutilise les 
 
 \begin{multicols}{4}
     \begin{itemize}
-        \item \verb#amsmath#
         \item \verb#forest#
+        \item \verb#nicematrix#
         \item \verb#simplekv#
+        \item \verb#tcolorbox#
         \item \verb#xstring#
     \end{itemize}
 \end{multicols}
