--- a/factory/03-tree/00-showcase[fr].tex
+++ b/factory/03-tree/00-showcase[fr].tex
@@ -6,9 +6,10 @@
 
     \usepackage{01-basic}
     \usepackage{02-coment}
-    \usepackage{03-frame}
-    \usepackage{04-focus-edge}
-    \usepackage{05-auto-num}
+    \usepackage{03-textofnodes}
+    \usepackage{04-frame}
+    \usepackage{05-focus-edge}
+    \usepackage{06-auto-num}
 \makeatother
 
 
