--- a/factory/03-tree/02-coment.sty
+++ b/factory/03-tree/02-coment.sty
@@ -5,12 +5,10 @@
 
 % == DEFINITIONS == %
 
-% -- Comments -- %
-
 \setKVdefault[tnsproba@comment@keys]{%
-    col = black,
-    dx  = 0cm,
-    dy  = 0cm
+    tcol = black,
+    dx   = 0cm,
+    dy   = 0cm
 }
 
 % #1 : color
@@ -22,12 +20,14 @@
 \newcommand\ptree@comment@no@star[3][]{
     \useKVdefault[tnsproba@comment@keys]%
     \setKV[tnsproba@comment@keys]{#1}%
-    \edef\col{\useKV[tnsproba@comment@keys]{col}}%
+    \edef\tcol{\useKV[tnsproba@comment@keys]{tcol}}%
     \edef\dx{\useKV[tnsproba@comment@keys]{dx}}%
     \edef\dy{\useKV[tnsproba@comment@keys]{dy}}%
-	\node [anchor=mid west, xshift=.5cm+\dx, yshift=\dy] at (#2.mid -| ptreecomment coord) {%
-		\textcolor{\col}{#3}%
-	};
+	%
+	\node[anchor = mid west,
+	      xshift = .5cm + \dx,
+	      yshift = \dy]
+	at (#2.mid -| ptreecomment coord) {\textcolor{\tcol}{#3}};
 }
 
 
@@ -35,10 +35,12 @@
 \newcommand\ptree@comment@star[3][]{
     \useKVdefault[tnsproba@comment@keys]%
     \setKV[tnsproba@comment@keys]{#1}%
-    \edef\col{\useKV[tnsproba@comment@keys]{col}}%
+    \edef\tcol{\useKV[tnsproba@comment@keys]{tcol}}%
     \edef\dx{\useKV[tnsproba@comment@keys]{dx}}%
     \edef\dy{\useKV[tnsproba@comment@keys]{dy}}%
-	\node [anchor=mid west, xshift=.825cm, yshift=0cm] at (#2.mid) {%
-		\textcolor{\col}{#3}%
-	};
+	%
+	\node[anchor = mid west,
+	      xshift = .825cm,
+	      yshift = 0cm]
+	at (#2.mid) {\textcolor{\tcol}{#3}};
 }
