Preparing Calc. of Exp. Val. - Continued...

--- a/factory/99-major-change-log/last-model-nodoc[fr].tex
+++ b/factory/99-major-change-log/last-model-nodoc[fr].tex
@@ -1,7 +1,7 @@
 Nouvelle version mineure \verb+0.9.0-beta+.
 
 \begin{itemize}[itemsep=.5em]
-    \item \topic{Calculs de l'espérance et de la variable dans le cas discret fini}
+    \item \topic{Calculs de l'espérance dans le cas discret fini}
     \begin{itemize}[itemsep=.5em]
     	\item ????
     \end{itemize}
