--- a/tnsproba/tnsproba-doc[fr].tex
+++ b/tnsproba/tnsproba-doc[fr].tex
@@ -467,58 +467,95 @@ $\stddev[s]{X}$
 
 \section{Calculer l'espérance -- Cas fini}
 
-\newparaexample{Affichage par défaut}
+\newparaexample{???}
 
+%\begin{latexex-flat}
+%\calcexpval{
+%    0      & 1   & 2   & 3    & 4    & 5   & 6   \\
+%    0.2000 & 0.1 & 0.2 & 0.05 & 0.15 & 0.1 & 0.2
+%}
+%\end{latexex-flat}
+%
+%\begin{latexex-flat}
+%\calcexpval[disp = none]{
+%    0      & 1   & 2   & 3    & 4    & 5   & 6   \\
+%    0.2000 & 0.1 & 0.2 & 0.05 & 0.15 & 0.1 & 0.2
+%}
+%\end{latexex-flat}
+%
+%\begin{latexex-flat}
+%\calcexpval[disp = all]{
+%    0      & 1   & 2   & 3    & 4    & 5   & 6   \\
+%    0.2000 & 0.1 & 0.2 & 0.05 & 0.15 & 0.1 & 0.2
+%}
+%\end{latexex-flat}
+%
+%
+%\begin{latexex-flat}
+%\calcexpval[disp = exp]{
+%    0      & 1   & 2   & 3    & 4    & 5   & 6   \\
+%    0.2000 & 0.1 & 0.2 & 0.05 & 0.15 & 0.1 & 0.2
+%}
+%\end{latexex-flat}
+%
+%
+%\begin{latexex-flat}
+%\calcexpval[disp = formal]{
+%    0      & 1   & 2   & 3    & 4    & 5   & 6   \\
+%    0.2000 & 0.1 & 0.2 & 0.05 & 0.15 & 0.1 & 0.2
+%}
+%\end{latexex-flat}
+%
+%
+%\begin{latexex-flat}
+%\calcexpval[disp = sumprod]{
+%    0      & 1   & 2   & 3    & 4    & 5   & 6   \\
+%    0.2000 & 0.1 & 0.2 & 0.05 & 0.15 & 0.1 & 0.2
+%}
+%\end{latexex-flat}
+%
+%
+%\newparaexample{Choisir ses couleurs}
+%
 \begin{latexex-flat}
-\calcexpval{
-    0      & 1   & 2   & 3    & 4    & 5   & 6   \\
-    0.2000 & 0.1 & 0.2 & 0.05 & 0.15 & 0.1 & 0.2
-}
-\end{latexex-flat}
-
-
-\newparaexample{Choisir ses couleurs}
-
-\begin{latexex-flat}
-\calcexpval[disp = all,
-            E = Esp, X = Y,
-            ind = i, xk = y, pk = q,
-            ope = \times,
-            com = Le tableau précédent permet de faire facilement 
-                  les calculs suivants.,
+\calcexpval[disp   = all,
+            E      = Esp, X  = Y,
+            k      = i,   xk = y, pk = q,
+            ope    = \times,
+            com    = Le tableau précédent donne les calculs suivants.,
             colors = blue-orange]{
     0      & 1   & 2   & 3    & 4    & 5   & 6   \\
     0.2000 & 0.1 & 0.2 & 0.05 & 0.15 & 0.1 & 0.2
 }
 \end{latexex-flat}
-
-
-
-
-
-
-
-
-
-
-
-\begin{latexex-flat}
-\justredo{}
-\end{latexex-flat}
-
-
-%\begin{latexex-flat}
-%\calcexpval[colors = gray - blue!30!yellow]{
-%    0      & 1   & 2   & 3       \\
-%    0.2000 & 0.1 & 0.2 & 0.05 
-%}
-%\end{latexex-flat}
+%
+%
+%
+%
+%
+%
+%
+%
+%
 %
 %
 %\begin{latexex-flat}
 %\justredo{}
 %\end{latexex-flat}
 %
+%
+%%\begin{latexex-flat}
+%%\calcexpval[colors = gray - blue!30!yellow]{
+%%    0      & 1   & 2   & 3       \\
+%%    0.2000 & 0.1 & 0.2 & 0.05 
+%%}
+%%\end{latexex-flat}
+%%
+%%
+%%\begin{latexex-flat}
+%%\justredo{}
+%%\end{latexex-flat}
+%%
 \section{Arbres pondérés}
 
 \subsection{Au commencement était la forêt...}
